--- a/CV/index.html
+++ b/CV/index.html
@@ -118,6 +118,8 @@
     </footer>
 
     <script defer src="https://code.jquery.com/jquery-3.6.1.slim.min.js"></script>
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="js/app.js"></script>
   </body>
 </html>
