--- a/CV/es/index.html
+++ b/CV/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,8 +11,8 @@
         rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="css/app.css" />
-        <title>Portfolio</title>
+        <link rel="stylesheet" href="../css/app.css" />
+        <title>Portafolio</title>
     </head>
     <body>
         <div id="cursor">
@@ -36,14 +36,14 @@
         <main class="main">
 
             <header class="header">
-                <h1 class="h1"><a href="#inicio" title="Mauricio Álvarez" class="a">Álvarez, Mauricio</a></h1>
+                <h1 class="h1"><a href="#inicio" title="Mauricio Álvarez" class="a">Mauricio Álvarez</a></h1>
                 <nav class="nav">
                     <ul class="ul">
-                        <li class="li"><a href="#inicio" title="Inicio" class="a">Home</a></li>
-                        <li class="li"><a href="#works" title="Works" class="a">Projects</a></li>
-                        <li class="li"><a href="#about" title="About" class="a">Contact</a></li>
+                        <li class="li"><a href="#inicio" title="Inicio" class="a">Inicio</a></li>
+                        <li class="li"><a href="#works" title="Works" class="a">Trabajos</a></li>
+                        <li class="li"><a href="#about" title="About" class="a">Contacto</a></li>
                         <span class="en">English</span>
-                        <input type="checkbox" class="check">
+                        <input type="checkbox" class="check" checked>
                         <span class="es">Spanish</span>
                     </ul>
                 </nav>
@@ -52,50 +52,50 @@
             <div class="seccion" id="inicio">
                 <section class="seccion info">
                     <h2 class="h2">Mauricio Álvarez</h2>
-                    <h3 class="h3">Full Stack Developer</h3>
+                    <h3 class="h3">Desarrollador Full Stack</h3>
 
                     <ul class="ul">
                         <li class="li">
-                            <a class="a" href="https://github.com/aqcmauricio/Portfolio" target="_blank" title="Github">Github Projects</a>
+                            <a class="a" href="https://github.com/aqcmauricio/Portfolio" target="_blank" title="Github">Proyectos en Github</a>
                         </li>
                         <li class="li">
-                            <a class="a" href="https://www.linkedin.com/in/c%C3%A9sar-mauricio-%C3%A1-4881351a2/" target="_blank" title="LinkedIn">Go to LinkedIn</a>
+                            <a class="a" href="https://www.linkedin.com/in/c%C3%A9sar-mauricio-%C3%A1-4881351a2/" target="_blank" title="LinkedIn">Visitar en LinkedIn</a>
                         </li>
                     </ul>
                 </section>
             </div>
 
             <section class="seccion works" id="works">
-                <h2 class="h2">Projects</h2>
-                <p>Here are some projects I did while studying HTML, CSS and Javascript</p>
+                <h2 class="h2">Trabajos</h2>
+                <p>Aquí te presento mis trabajos mientras estudiaba un curso de HTML, CSS y Javascript</p>
 
                 <div class="grid">
                     <article class="article">
                         <a href="#" class="a" title="Trabajo1">
                             <figure class="figure">
-                                <img src="assets/chica.jpg" alt="Imagen" class="img" loading="lazy">
+                                <img src="../assets/chica.jpg" alt="Imagen" class="img" loading="lazy">
                             </figure>
-                            <h4 class="h4">Project Name</h4>
+                            <h4 class="h4">Nombre del trabajo</h4>
                         </a>
                     </article>
                     <article class="article">
                         <a href="#" class="a" title="Trabajo2">
                             <figure class="figure">
-                                <img src="assets/chico.jpg" alt="Imagen" class="img" loading="lazy">
+                                <img src="../assets/chico.jpg" alt="Imagen" class="img" loading="lazy">
                             </figure>
-                            <h4 class="h4">Project Name</h4>
+                            <h4 class="h4">Nombre del trabajo</h4>
                         </a>
                     </article>
                 </div>
             </section>
 
             <section class="seccion about" id="about">
-                <h2 class="h2">About...</h2>
-                <p class="p">I am a good human being, honest, responsible, focused on achieving my dreams, and capable of turning day-to-day obstacles into opportunities to fulfill my purposes and goals. I am passionate about everything I do, and my greatest motivation is personal and professional growth based on respect for others and teamwork.</p>
-                <p class="p">I consider loyalty as one of the most important values; I enjoy learning new things every day that help me achieve my goals and optimize my work; I have worked as a Quality Auditor at Banco Popular, as a National and International Line Operator of UNE Telecommunications, as an Internal Control Assistant at St. Even, and as a Junior Developer at Tendyc.</p>
-                <p class="p">Although I have worked most of the time in different areas than in Software Development, I have always been passionate about technological tools, and their implementation in these working years (approx. 22 years) has helped me to carry out my work efficiently and with very good results in these entities of which I was a part and to which I am extremely grateful for my personal and professional growth.</p>
-                <p class="p">For this reason, in April 2022 I decided to pursue my dream and focus solely and exclusively on being the best Fullstack Developer, and I know that with determination and discipline I am sure I will achieve it.</p>
-                <p class="p">In my spare time, I enjoy listening to any genre of music; rock music is one of my favorites indeed; I spend a lot of this free time learning programming languages and improving and consolidating my English fluency.</p>
+                <h2 class="h2">Sobre mí</h2>
+                <p class="p">Soy un buen ser humano, honesto, responsable, enfocado en alcanzar mis sueños, capaz de convertir los obstáculos del día a día en oportunidades para cumplir mis propósitos y metas, soy un apasionado en todo lo que hago y mi mayor motivación es el crecimiento personal y profesional a partir del respeto por el otro y el trabajo en equipo.</p>
+                <p class="p">Considero la lealtad como uno de los valores más importantes, disfruto aprendiendo día a día cosas nuevas que me ayuden a alcanzar mis objetivos y optimizar mi trabajo, me he desempeñado como Auditor de Calidad en el Banco Popular, Operador Línea Nacional e Internacional de UNE Telecomunicaciones, Asistente de Control Interno en Industrias St. Even y como Desarrollador junior en Tendyc. </p>
+                <p class="p">Si bien he trabajado la mayor parte del tiempo en áreas distintas al Desarrollo de Software, siempre me han apasionado las herramientas tecnológicas, y su implementación en estos años laborales (aprox. 22 años) me ha ayudado a realizar mi trabajo de manera eficiente y con muy buenos resultados en las entidades de las que formé parte y a las que estoy sumamente agradecido por mi crecimiento personal y profesional.</p>
+                <p class="p">Es por esto que en abril de 2022 decidí perseguir mi sueño y enfocarme única y exclusivamente en ser el mejor Fullstack Developer, lo que estoy seguro que con toda mi determinación y disciplina lograré día a día.</p>
+                <p class="p">En mi tiempo libre disfruto mucho escuchar música de cualquier género, siendo el rock uno de mis preferidos, invierto mucho de este tiempo en el aprendizaje de lenguajes de programación y el idioma Inglés.</p>
 
                 <ul class="rrss">
                     <li class="li">
@@ -118,12 +118,12 @@
         </main>
 
         <footer class="footer">
-            <span class="span">In any life situation: <br> ⚖ <b>Subtract bad things from good things</b> and this result will help you <b>make the best decision.</b> ⚖ <br><br> César Mauricio Álvarez Quintero</span>
+            <span class="span">En cualquier situación de la vida: <br> ⚖ <b>Toma lo bueno, resta lo malo</b> y el resultado te ayudará a tomar <b>la mejor decisión.</b> ⚖ <br><br> César Mauricio Álvarez Quintero</span>
         </footer>
 
         <script defer src="https://code.jquery.com/jquery-3.6.1.slim.min.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script defer src="js/app.js"></script>
+        <script defer src="../js/app.js"></script>
     </body>
 </html>
 
