language implementation two

--- a/CV/es/index.html
+++ b/CV/es/index.html
@@ -40,11 +40,11 @@
                 <nav class="nav">
                     <ul class="ul">
                         <li class="li"><a href="#inicio" title="Inicio" class="a">Inicio</a></li>
-                        <li class="li"><a href="#works" title="Works" class="a">Trabajos</a></li>
+                        <li class="li"><a href="#works" title="Works" class="a">Proyectos</a></li>
                         <li class="li"><a href="#about" title="About" class="a">Contacto</a></li>
-                        <span class="en">English</span>
+                        <span class="en">Inglés</span>
                         <input type="checkbox" class="check" checked>
-                        <span class="es">Spanish</span>
+                        <span class="es">Español</span>
                     </ul>
                 </nav>
             </header>
@@ -66,7 +66,7 @@
             </div>
 
             <section class="seccion works" id="works">
-                <h2 class="h2">Trabajos</h2>
+                <h2 class="h2">Proyectos</h2>
                 <p>Aquí te presento mis trabajos mientras estudiaba un curso de HTML, CSS y Javascript</p>
 
                 <div class="grid">
